--- a/src/main/resources/db-config.properties
+++ b/src/main/resources/db-config.properties
@@ -1,4 +1,4 @@
-mysql.connection.driver=com.mysql.jdbc.Driver
+mysql.connection.driver=com.mysql.cj.jdbc.Driver
 mysql.connection.url=jdbc:mysql://localhost:3306/sample
 mysql.connection.username=root
 mysql.connection.password=P@$$w0rd
